package com.example.Finma_BE.enums;

public enum RecurringStatus {
    ACTIVE, PAUSED, CANCELLED
}
