@startuml SoDoLop_TongHop
title So do lop - Tong hop (Danh muc, Vay no, Dinh ky)

class BaseEntity {
	createdAt: LocalDateTime
	updatedAt: LocalDateTime
}

class User {
	id: Long
	username: String
	email: String
	phone: String
	password: String
	fullName: String
	avatar: String
	dob: LocalDate
	job: String
	currency: String
	timezone: String
	status: Integer
}

class Category {
	id: Long
	name: String
	type: CategoryType
	icon: String
	color: String
	isDefault: Boolean
	user: User
	parent: Category
}

class Account {
	id: Long
	name: String
	type: AccountType
	balance: BigDecimal
	icon: String
	color: String
	user: User
}

class Debt {
	id: Long
	personName: String
	type: DebtType
	totalAmount: BigDecimal
	interestRate: BigDecimal
	startDate: LocalDate
	dueDate: LocalDate
	note: String
	status: DebtStatus
	payments: List<DebtPayment>
	user: User
}

class DebtPayment {
	id: Long
	amount: BigDecimal
	paymentDate: LocalDate
	title: String
	counterparty: String
	debt: Debt
}

class RecurringTransaction {
	id: Long
	amount: BigDecimal
	title: String
	note: String
	frequency: Frequency
	dayOfMonth: Integer
	dayOfWeek: Integer
	startDate: LocalDate
	reminderDaysBefore: Integer
	isActive: Boolean
	status: RecurringStatus
	user: User
	account: Account
	category: Category
}

enum CategoryType
enum AccountType
enum DebtType
enum DebtStatus
enum Frequency
enum RecurringStatus

Category --|> BaseEntity
Account --|> BaseEntity
Debt --|> BaseEntity
DebtPayment --|> BaseEntity
RecurringTransaction --|> BaseEntity
User --|> BaseEntity

Category "0..*" --> "1" User : user
Category "0..1" <-- "0..*" Category : parent
Category --> CategoryType

Account "0..*" --> "1" User : user
Account --> AccountType

Debt "1" <-- "0..*" DebtPayment : payments
DebtPayment "0..*" --> "1" Debt : debt
Debt "0..*" --> "1" User : user
Debt --> DebtType
Debt --> DebtStatus

RecurringTransaction "0..*" --> "1" User : user
RecurringTransaction "0..*" --> "1" Account : account
RecurringTransaction "0..*" --> "1" Category : category
RecurringTransaction --> Frequency
RecurringTransaction --> RecurringStatus

@enduml
